updated index.html template file

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,5 +15,7 @@ background-color:#b0c4de;
 <p>Hello world! Welcome to my website.</p>
 <p>
 <p>Hope you like the funky colour.</p>
+<p>
+<p>This will now update my vcloud vms</p>
 </body>
 </html>
