--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,6 @@ background-color:#b0c4de;
 <p>
 <p>Hope you like the funky colour.</p>
 <p>
-<p>This will now update my vcloud vms</p>
+<p>This will now update my vcloud vms which is cool</p>
 </body>
 </html>
